--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material-nextjs": "^7.3.3",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
