update prettier plugin

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "book-tribe",
+  "name": "book-soul",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
